demos/devdocs/0.61.0/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:378](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L378)

## Properties

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:397](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L397)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:398](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L398)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:382](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L382)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:380](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L380)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:388](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L388)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:386](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L386)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:396](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L396)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:394](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L394)

---

### opts

```ts
opts: NVConfigOptions;
```

Defined in: [nvdocument.ts:392](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L392)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:384](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L384)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:390](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L390)
