demos/devdocs/0.62.1/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:429](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L429)

## Properties

### completedAngles

```ts
completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:451](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L451)

---

### completedMeasurements

```ts
completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:450](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L450)

---

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:448](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L448)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:449](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L449)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:433](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L433)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:431](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L431)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:439](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L439)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:437](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L437)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:447](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L447)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:445](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L445)

---

### opts

```ts
opts: NVConfigOptions;
```

Defined in: [nvdocument.ts:443](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L443)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:435](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L435)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:441](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L441)
